add `/server-stats` endpoint
