# src/routes/serverStats/index.ts
@@ -1,2 +1,3 @@
+export * from './getAllServerStats.js';
 export * from './getServerStats.js';
 export * from './postServerStats.js';
